@@ -1,3 +1,10 @@
+2015-05-09  Titus Brown  <titus@idyll.org>
+
+   * sandbox/{count-kmers.py,count-kmers-single.py}: added scripts to output
+   k-mer counts.
+   * tests/test_sandbox_scripts.py: added tests for count-kmers.py and
+   count-kmers-single.py.
+
 2015-04-23  Lex Nederbragt  <lex.nederbragt@ibv.uio.no>
 
    * tests/test_scripts.py: added a test for extract-partitions:
